--- a/SimFunctions/BuildingSimFunctions.Rmd
+++ b/SimFunctions/BuildingSimFunctions.Rmd
@@ -21,35 +21,35 @@ library(foreach)
 library(EnvStats)
 
 # Functions & model parameters
-source("Sim.Functions/moveMx_fun.R")
-source("Sim.Functions/simfun_exp.R")
+source("SimFunctions/moveMx_fun.R")
+source("SimFunctions/simfun_exp.R")
 source("ModelFunctions/ParamVals.R")
 source("ModelFunctions/subpop_mx_fun.R")
-seeds_df <- read_csv("seedSearch_2024-11-14 09:27:34.519536.csv") %>% 
-  rbind(.,read_csv("seedSearch_2024-11-14 10:03:24.033834.csv")) %>% 
+seeds_df <- read_csv("seedSearchOutput/seedSearch_2024-11-14 10:03:24.033834.csv") %>% 
+  rbind(.,read_csv("seedSearchOutput/seedSearch_2024-12-05 10:08:25.870686.csv")) %>% 
   mutate(seeds2 = floor(seeds)) %>% 
   group_by(asp.mag) %>% 
   summarize(avg.seeds = round(mean(seeds)))
 
 ```
 
-## Exponential growth, symmetrical movement
-#### Testing out the simplest version of simulation
-```{r S1_setup}
+## Scenario 1: Exponential growth, symmetrical movement, symmetrical aspect effects
+```{r Scen1}
 # Things needed to run sim function line by line
 clim.sd.i <- clim.sd <- 1
 asp.mag <- asp.mag.i <- 2
 rep = 1
 move.rates.row <- 2
+rho <- 0.25
 
 # Sim. function inputs
 burn.in.yrs <- 100
 sim.yrs <- 500
 asp.effects <- c(-1,1)
 n.subpops <- length(asp.effects)
-reps <- 10
-clim.sds <- seq(0,20,by=2);clim.sds[clim.sds==0] <- 0.001
-asp.mags <- seq(0,20,by=2)
+reps <- 5
+clim.sds <- seq(0,20,by=1);clim.sds[clim.sds==0] <- 0.001
+asp.mags <- seq(0,20,by=1)
 rhos <- c(0,0.25,0.5)
 
 ## Creating all combinations of movement rates
@@ -98,6 +98,86 @@ S1_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","Env
                     clim.var = var(clim),
                     pop.var = var(pop.lam),
                     lt.pop.lam = geoMean(pop.lam),
+                    sub.corr = cor(s1,s2),
+                    sum.s1.lam.dev = sum(s1-1),
+                    sum.s2.lam.dev = sum(s2-1),
+                    sum.all.lam.dev = sum(c(sum(s1-1),sum(s2-1))),
+                    mean.lam.dev = mean(c(sum(s1-1),sum(s2-1)))) %>% 
+          mutate(clim.sd = clim.sd.i,
+                 rho = rho.i,
+                 asp.mag = asp.mag.i,
+                 rep = rep,
+                 asp.effects = list(asp.effects)) %>% 
+          merge(.,move.rates.i)
+        return(tmp.df)
+        # rm(df,tmp.df,clim.sd.i,asp.mag.i,move.rate.i)
+        
+      }
+stopCluster(cl)
+write_csv(S1_out_df,paste0("SimOutput/S1_",round(Sys.time()),".csv"))
+```
+
+
+## Scenario 2: Exponential growth, symmetrical movement, Asymmetrical aspect effects
+```{r Scen1}
+# Things needed to run sim function line by line
+
+# Sim. function inputs
+burn.in.yrs <- 100
+sim.yrs <- 500
+asp.effects <- c(-1,2)
+n.subpops <- length(asp.effects)
+reps <- 2
+clim.sds <- seq(0,20,by=1);clim.sds[clim.sds==0] <- 0.001
+asp.mags <- seq(0,20,by=1)
+rhos <- c(0,0.25,0.5)
+
+## Creating all combinations of movement rates
+subpop.names = LETTERS[1:n.subpops] # Name subpops with letters
+move.rates = seq(0,0.1,0.02)
+move.dirs = expand.grid(from=subpop.names,to=subpop.names) %>% # get all combos
+  # Remove rows that imply no movement (A to A)
+  filter(from!=to) %>% 
+   # Concatenate
+  mutate(col.names = paste0(from,"to",to)) %>% 
+  # save last column as a vector
+  arrange(col.names) %>% pull() 
+
+# Create movement data.frame to loop over
+move.rates.df = matrix(data=rep(move.rates,length(move.dirs)),ncol=length(move.dirs)) %>% # generate matrix with movement rates
+  as.data.frame() %>% 
+  # Make all combos of movement rates
+  expand.grid() %>% 
+  filter(if_all(starts_with("V"),~ .==V1)) ## This filters for symmetrical movement rates
+names(move.rates.df)=move.dirs # rename columns to make movement direction clear
+rm(subpop.names,move.dirs,move.rates) # remove extra things from env
+
+#### Run S1 #####
+cl = makeCluster(20)
+registerDoParallel(cl = cl)
+
+S2_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:% 
+  foreach(move.rates.row = 1:nrow(move.rates.df), .combine = rbind,.packages=c("tidyverse","EnvStats")) %:%
+    foreach(clim.sd.i = clim.sds, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:%
+      foreach(asp.mag.i = asp.mags, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:% 
+        foreach(rho.i = rhos,.combine = rbind,.packages=c("tidyverse","EnvStats")) %dopar% {
+
+        move.rates.i <- move.rates.df[move.rates.row,]
+        
+        ##### Create a movement matrix from the move.rates row
+        move.mx.i <- moveMx_fun(n.subpops,move.rates.i)
+        
+        seeds.i = seeds_df$avg.seeds[seeds_df$asp.mag==asp.mag.i]
+        
+        df = simfun_exponential(burn.in.yrs=burn.in.yrs, sim.yrs=sim.yrs, n.subpops=n.subpops,asp.effects = asp.effects,
+                            clim.sd=clim.sd.i, asp.mag=asp.mag.i, move.mx = move.mx.i,seeds = seeds.i,rho = rho.i)
+        
+        tmp.df = df %>%
+          filter(year>burn.in.yrs) %>% # Filter out burn-in years. This could also happen within the function.
+          summarise(clim.mean = mean(clim),
+                    clim.var = var(clim),
+                    pop.var = var(pop.lam),
+                    lt.pop.lam = geoMean(pop.lam),
                     sub.corr = cor(s1,s2)) %>% 
           mutate(clim.sd = clim.sd.i,
                  rho = rho.i,
@@ -111,9 +191,14 @@ S1_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","Env
         
       }
 stopCluster(cl)
-
-# write_csv(S1_out_df,paste0("Sim.Output/S1_ExpGrowth_SymMovement/",round(Sys.time()),".csv"))
+write_csv(S2_out_df,paste0("SimOutput/ExpGrowth_SymMovement_AsymMicrohabs/",round(Sys.time()),".csv"))
 ```
+
+
+###########################################################################################################################
+###########################################################################################################################
+######################################### Scratch and old code ############################################################
+
 
 ```{r}
 plot_df <- S1_out_df %>% 
@@ -128,119 +213,130 @@ move.rates = c(0,0.04,0.1)
 plot.breaks = seq(0.5,1.3,0.05)
 neg.pal = brewer.pal(n = sum(plot.breaks<1),name = "YlOrBr")
 pos.pal = brewer.pal(n = 9,name = "Blues")[5:9]
-
 cols = c(rev(neg.pal),pos.pal)
 
-ggplot(filter(plot_df,move.rate %in%move.rates), aes(x=clim.sd,y=asp.mag,z=agg.lt.pop.lam))+
-  geom_contour_filled(breaks=plot.breaks)+
-  #scale_fill_manual(values = cols)+
-  facet_grid(move.rate~rho)+
-  theme_bw(base_size = 16)+
-  labs(x="Climate SD",y="Microhabitat effect strength",fill="lambda")
-ggsave(h=8,w=12,filename = "climateAutocorr_x_moverates.png",dpi=300)
 ```
 
 
-s1 = basic output
-s2 = same aspect but different aspect strengths
-
-#### Plot S1 results
 ```{r}
+move.mx = moveMx_fun(2,data.frame(AtoB=0.01,BtoA=0.01))
+asp.mag = 16
+clim.sd = 12
+seeds = seeds_df$avg.seeds[seeds_df$asp.mag==asp.mag]
+out_df = NULL
 
-n1p1_plot_df <- read_csv(file = "Sim.Output/S1_ExpGrowth_SymMovement/S1_output_2024-11-23 09:00:01.csv") %>% 
-  group_by(clim.sd,asp.mag,move.rate = AtoB) %>% 
-  summarize(agg.pop.var = mean(pop.var),
-            mean.corr = mean(sub.corr,na.rm = T),
-            agg.lt.pop.lam = mean(lt.pop.lam)) %>% 
-  mutate(asp.effects = c("-1, +1"))
+df = simfun_exponential(burn.in.yrs=0,
+                      sim.yrs=200,
+                      n.subpops=n.subpops,
+                      asp.effects = c(-1,1),
+                      clim.sd=clim.sd,
+                      asp.mag=asp.mag,
+                      move.mx = move.mx,
+                      seeds = seeds,
+                      rho = 0)
 
-<<<<<<< HEAD:Sim.Functions/BuildingSimFunctions.Rmd
 
-=======
->>>>>>> e97118219a287caf00536b2ab3b23349d01734b3:SimFunctions/BuildingSimFunctions.Rmd
-# S2_plot_df <- S2_out_df %>% 
-#   group_by(clim.sd,asp.mag,move.rate = AtoB) %>% 
-#   summarize(agg.pop.var = mean(pop.var),
-#             mean.corr = mean(sub.corr,na.rm = T),
-#             agg.lt.pop.lam = mean(lt.pop.lam)) %>% 
-#   mutate(asp.effects = c("-1, -5"))
+# df <- filter(df,year>0)
 
-move.rates = c(0,0.025,0.05,0.075,0.1)
-# 
-# p11 <- ggplot(filter(S1_plot_df, move.rate %in% move.rates),aes(x=clim.sd,y=asp.mag,z=agg.lt.pop.lam))+
-#   geom_contour_filled()+
-#   facet_wrap(~move.rate,ncol=5)
-# 
-# p15 <- ggplot(filter(S2_plot_df, move.rate %in% move.rates),aes(x=clim.sd,y=asp.mag,z=agg.lt.pop.lam))+
-#   geom_contour_filled()+
-#   facet_wrap(~move.rate,ncol=5)
-#
-# cowplot::plot_grid(p11,p15,ncol = 1)
-
-n1n5_plot_df <- read_csv(file = "Sim.Output/S1_ExpGrowth_SymMovement/S1_output_2024-11-25 20:01:57.csv") %>% 
-  group_by(clim.sd,asp.mag,move.rate = AtoB) %>% 
-  summarize(agg.pop.var = mean(pop.var),
-            mean.corr = mean(sub.corr,na.rm = T),
-            agg.lt.pop.lam = mean(lt.pop.lam)) %>% 
-  mutate(asp.effects = c("-1, -5"))
-
-move.rates = c(0,0.025,0.05,0.075,0.1)
-
-plot_breaks = seq(0.5,1.3,0.1)
-
-n1p1 <- ggplot(filter(n1p1_plot_df, move.rate %in% move.rates),aes(x=clim.sd,y=asp.mag,z=agg.lt.pop.lam))+
-  geom_contour_filled(breaks = plot_breaks)+
-  facet_wrap(~move.rate,ncol=5) +
-  labs(x="Climate SD", y="Microhabitat effect",title="Microhabitat shifts = c(-1,1)")
-
-n1n5 <- ggplot(filter(n1n5_plot_df, move.rate %in% move.rates),aes(x=clim.sd,y=asp.mag,z=agg.lt.pop.lam))+
-  geom_contour_filled(breaks = plot_breaks)+
-  facet_wrap(~move.rate,ncol=5)+
-  labs(x="Climate SD", y="Microhabitat effect",title="Microhabitat shifts = c(-1,-5)")
-
-cowplot::plot_grid(n1p1,n1n5,ncol = 1)
-
-ggplot(filter(n1p1_plot_df,asp.mag%in%c(0,5,10,15,20)&move.rate%in%move.rates),aes(x=clim.sd,y=agg.lt.pop.lam,color=factor(asp.mag)))+
-  geom_smooth()+
-  facet_wrap(~move.rate)
-
-ggplot(filter(S1_plot_df,asp.mag%in%c(0,5,10,15)),aes(x=clim.sd,y=agg.lt.pop.lam,color=factor(move.rate)))+
-  geom_smooth(se=F)+
-  facet_wrap(~asp.mag)
-
-ggplot(filter(n1p1_plot_df,asp.mag%in%c(0,5,10,15)&move.rate%in%move.rates),
-       aes(x=clim.sd,y=agg.pop.var,color=factor(move.rate)))+
-  geom_smooth(se=F)+
-  facet_wrap(~asp.mag)
-
-ggplot(filter(n1p1_plot_df,asp.mag%in%c(0,5,10,15,20)&move.rate%in%move.rates),
-       aes(x=clim.sd,y=mean.corr,color=factor(move.rate)))+
-  geom_line()+
-  facet_wrap(~asp.mag)
-
-ggplot(filter(n1p1_plot_df,move.rate==0&asp.mag%in%seq(8,20,2)),
-       aes(x=clim.sd,y=mean.corr,color=factor(asp.mag)))+
-  geom_smooth(se=F,linewidth=2)+
-  scale_color_viridis_d()+
-  theme_bw()
-
-ggplot(filter(n1p1_plot_df,move.rate==0),aes(x=clim.sd,y=asp.mag,z=mean.corr))+
-  geom_contour_filled()+
-  theme_bw()
-
- ggplot(filter(S1_plot_df,move.rate==0&clim.sd!=0),aes(x=asp.mag,y=mean.corr))+
+ggplot(df,aes(x=s1,y=s2))+
   geom_point()+
-  geom_smooth()+
-  facet_wrap(~clim.sd)+
-  geom_vline(xintercept = 12)+
-  theme_bw()
+  labs(title=paste0("Microhabitat effect strength = ",asp.mag,"\nClimate SD = ", clim.sd))
+ggsave(h=8,w=8,filename = paste0("figs/clim",clim.sd,"_microhab",asp.mag,".png"))
 
-ggplot(filter(n1p1_plot_df,move.rate==0),aes(y=mean.corr,x=agg.lt.pop.lam))+
-  geom_line()+
-  facet_wrap(~asp.mag)+
-  theme_bw()
+clim.sds = seq(3,15,1)
+out_df <- NULL
+for(i in 1:length(clim.sds)){
+  
+  print(i)
+  df = simfun_exponential(burn.in.yrs=0,
+                        sim.yrs=500,
+                        n.subpops=n.subpops,
+                        asp.effects = c(-1,1),
+                        clim.sd=clim.sds[i],
+                        asp.mag=asp.mag,
+                        move.mx = move.mx,
+                        seeds = seeds,
+                        rho = 0)
+  
+  out_df = rbind(out_df,df)
+}
 
+ggplot(out_df,aes(x=s1,y=s2))+
+  geom_point()+
+  facet_wrap(~clim.sd)
+
+hist(rnorm(10000,0,6),breaks=50)
+
+cor_df = out_df %>% 
+  filter(clim.sd>0) %>% 
+  group_by(clim.sd,asp.mag) %>% 
+  summarize(cor = cor(s1,s2))
+
+ggplot(cor_df,aes(x=clim.sd,y=cor))+
+  geom_point()+
+  geom_line()
 ```
+
+```{r}
+move.mx = moveMx_fun(2,data.frame(AtoB=0.01,BtoA=0.01))
+asp.mag = 16
+clim.sd = 12
+seeds = seeds_df$avg.seeds[seeds_df$asp.mag==asp.mag]
+out_df = NULL
+
+df = simfun_exponential(burn.in.yrs=0,
+                      sim.yrs=200,
+                      n.subpops=n.subpops,
+                      asp.effects = c(-1,1),
+                      clim.sd=clim.sd,
+                      asp.mag=asp.mag,
+                      move.mx = move.mx,
+                      seeds = seeds,
+                      rho = 0)
+
+
+# df <- filter(df,year>0)
+
+ggplot(df,aes(x=s1,y=s2))+
+  geom_point()+
+  labs(title=paste0("Microhabitat effect strength = ",asp.mag,"\nClimate SD = ", clim.sd))
+ggsave(h=8,w=8,filename = paste0("figs/clim",clim.sd,"_microhab",asp.mag,".png"))
+
+clim.sds = seq(3,15,1)
+out_df <- NULL
+for(i in 1:length(clim.sds)){
+  
+  print(i)
+  df = simfun_exponential(burn.in.yrs=0,
+                        sim.yrs=500,
+                        n.subpops=n.subpops,
+                        asp.effects = c(-1,1),
+                        clim.sd=clim.sds[i],
+                        asp.mag=asp.mag,
+                        move.mx = move.mx,
+                        seeds = seeds,
+                        rho = 0)
+  
+  out_df = rbind(out_df,df)
+}
+
+ggplot(out_df,aes(x=s1,y=s2))+
+  geom_point()+
+  facet_wrap(~clim.sd)
+
+hist(rnorm(10000,0,6),breaks=50)
+
+cor_df = out_df %>% 
+  filter(clim.sd>0) %>% 
+  group_by(clim.sd,asp.mag) %>% 
+  summarize(cor = cor(s1,s2))
+
+ggplot(cor_df,aes(x=clim.sd,y=cor))+
+  geom_point()+
+  geom_line()
+```
+
+
 
 ## adding in climate autocorrelation
 ```{r}
@@ -282,124 +378,5 @@ ggplot(clims,aes(x = years))+
   geom_line(aes(y=clim.cor,color="clim.cor"))+
   ggthemes::theme_clean()+
   scale_color_manual(values=c("salmon2","black"))
-```
-
-```{r}
-move.mx = moveMx_fun(2,data.frame(AtoB=0.01,BtoA=0.01))
-asp.mag = 16
-clim.sd = 12
-seeds = seeds_df$avg.seeds[seeds_df$asp.mag==asp.mag]
-out_df = NULL
-
-df = simfun_exponential(burn.in.yrs=0,
-                      sim.yrs=200,
-                      n.subpops=n.subpops,
-                      asp.effects = c(-1,1),
-                      clim.sd=clim.sd,
-                      asp.mag=asp.mag,
-                      move.mx = move.mx,
-                      seeds = seeds,
-                      rho = 0)
-
-
-# df <- filter(df,year>0)
-
-ggplot(df,aes(x=s1,y=s2))+
-  geom_point()+
-  labs(title=paste0("Microhabitat effect strength = ",asp.mag,"\nClimate SD = ", clim.sd))
-ggsave(h=8,w=8,filename = paste0("figs/clim",clim.sd,"_microhab",asp.mag,".png"))
-
-clim.sds = seq(3,15,1)
-out_df <- NULL
-for(i in 1:length(clim.sds)){
-  
-  print(i)
-  df = simfun_exponential(burn.in.yrs=0,
-                        sim.yrs=500,
-                        n.subpops=n.subpops,
-                        asp.effects = c(-1,1),
-                        clim.sd=clim.sds[i],
-                        asp.mag=asp.mag,
-                        move.mx = move.mx,
-                        seeds = seeds,
-                        rho = 0)
-  
-  out_df = rbind(out_df,df)
-}
-
-ggplot(out_df,aes(x=s1,y=s2))+
-  geom_point()+
-  facet_wrap(~clim.sd)
-
-hist(rnorm(10000,0,6),breaks=50)
-
-cor_df = out_df %>% 
-  filter(clim.sd>0) %>% 
-  group_by(clim.sd,asp.mag) %>% 
-  summarize(cor = cor(s1,s2))
-
-ggplot(cor_df,aes(x=clim.sd,y=cor))+
-  geom_point()+
-  geom_line()
-```
-
-
-```{r}
-move.mx = moveMx_fun(2,data.frame(AtoB=0.01,BtoA=0.01))
-asp.mag = 16
-clim.sd = 12
-seeds = seeds_df$avg.seeds[seeds_df$asp.mag==asp.mag]
-out_df = NULL
-
-df = simfun_exponential(burn.in.yrs=0,
-                      sim.yrs=200,
-                      n.subpops=n.subpops,
-                      asp.effects = c(-1,1),
-                      clim.sd=clim.sd,
-                      asp.mag=asp.mag,
-                      move.mx = move.mx,
-                      seeds = seeds,
-                      rho = 0)
-
-
-# df <- filter(df,year>0)
-
-ggplot(df,aes(x=s1,y=s2))+
-  geom_point()+
-  labs(title=paste0("Microhabitat effect strength = ",asp.mag,"\nClimate SD = ", clim.sd))
-ggsave(h=8,w=8,filename = paste0("figs/clim",clim.sd,"_microhab",asp.mag,".png"))
-
-clim.sds = seq(3,15,1)
-out_df <- NULL
-for(i in 1:length(clim.sds)){
-  
-  print(i)
-  df = simfun_exponential(burn.in.yrs=0,
-                        sim.yrs=500,
-                        n.subpops=n.subpops,
-                        asp.effects = c(-1,1),
-                        clim.sd=clim.sds[i],
-                        asp.mag=asp.mag,
-                        move.mx = move.mx,
-                        seeds = seeds,
-                        rho = 0)
-  
-  out_df = rbind(out_df,df)
-}
-
-ggplot(out_df,aes(x=s1,y=s2))+
-  geom_point()+
-  facet_wrap(~clim.sd)
-
-hist(rnorm(10000,0,6),breaks=50)
-
-cor_df = out_df %>% 
-  filter(clim.sd>0) %>% 
-  group_by(clim.sd,asp.mag) %>% 
-  summarize(cor = cor(s1,s2))
-
-ggplot(cor_df,aes(x=clim.sd,y=cor))+
-  geom_point()+
-  geom_line()
 ```
 
